worked on mobile scroll bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,10 +19,14 @@ html {
   margin: 0;
   // overscroll-behavior: none;
   color: $text-color;
+  height: 100%;
+  width: 100%;
 }
 body {
   margin: 0;
   overscroll-behavior: none;
+  height: 100%;
+  width: 100%;
 }
 
 h1 {
@@ -57,6 +61,23 @@ svg {
   background-color: $brand-color-2;
   z-index: 990;
 }
+.loader-container {
+  position: relative;
+  height: 50vh;
+  width: 50vw;
+  margin: auto;
+  .page-loader {
+    position: absolute;
+    height: 0;
+    padding-top: 50%;
+    border: 1px solid tomato;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+}
+
 @media (max-width: 500px) {
   //NAVBAR SECTION
   .navbar-container {
@@ -845,30 +866,37 @@ svg {
       flex-direction: column;
       margin: 1.25% 0;
       width: 100%;
-      .slider-mask {
+      .slider-container {
         display: flex;
-        justify-content: center;
+        width: 90%;
         margin: 0 auto;
-        width: 80%;
-        .card {
-          position: relative;
+        // overflow: hidden;
+        .slider-mask {
+          // align-self: flex-start;
           flex-shrink: 0;
-          margin: 0 10px;
-          .slider-image-container {
+          display: flex;
+          // justify-content: center;
+          width: 100%;
+          .card {
             position: relative;
-            width: 100%;
-            height: 0;
-            padding-top: calc(2 / 3 * 100%);
-            overflow: hidden;
-            border-radius: 10px;
-            box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.3);
-            .slider-image {
-              position: absolute;
-              top: 0;
-              left: 0;
-              bottom: 0;
-              right: 0;
+            flex-shrink: 0;
+            margin: 0 10px;
+            .slider-image-container {
+              position: relative;
               width: 100%;
+              height: 0;
+              padding-top: calc(2 / 3 * 100%);
+              overflow: hidden;
+              border-radius: 10px;
+              box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.3);
+              .slider-image {
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+                width: 100%;
+              }
             }
           }
         }
